# idris-golang

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  Setup.hs  idris-cplusplus.cabal
cpprts/: Makefile  bigint.cpp  bigint.h  box.h  callbacks.h  exceptions.h  idris_runtime.h  io.cpp  io.h  lambdas.h  main.cpp  main.h  mem.h  types.cpp  types.h  types_aliases.h  types_extern.h  utility.cpp  utility.h  vm.cpp  vm.h
gorts/: Makefile
gorts/src/idris_runtime/: constructor.go  conversions.go  ffi.go  idris_runtime.go  io.go  utf8.go  vm.go
src/: Main.hs  MainGo.hs
src/IRTS/: AST.hs  CodegenCpp.hs  CodegenFFI.hs  CodegenGeneric.hs  CodegenGo.hs  CodegenIL.hs
src/IRTS/Cpp/: AST.hs
src/IRTS/Generic/: AST.hs  CodegenFFI.hs  CodegenGeneric.hs
src/IRTS/IL/: AST.hs
