Name:           idris-go
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Andy Arvanitis

Build-Type:	Custom
Cabal-Version:  >= 1.8

Executable idris-go
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:  idris
                , base
                , containers
                , directory
                , filepath
                , haskeline >= 0.7
                , mtl
                , process
                , text
                , transformers
                , vector

  other-modules: IRTS.CodegenGo
               , IRTS.Generic.AST
               , IRTS.Generic.CodegenGeneric

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields

